fix(pubky-explorer): fix Jumping Scrollbar Issue

--- a/pubky-explorer/src/css/index.css
+++ b/pubky-explorer/src/css/index.css
@@ -11,6 +11,8 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  margin: calc(100vw - 100%);
 }
 
 a {
